--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@
     font-size: 24px;
     text-align: center;
     border: 2px solid #ccc;
+    box-shadow: 2px 2px 9px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
 
 .result-container {
     width: 50%;
     text-align: center;
-    border: 2px solid #ccc;
+    box-shadow: 2px 2px 9px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 20px;
@@ -63,3 +64,30 @@
     visibility: visible;
     opacity: 1;
 }
+
+.menu-bar {
+    background-color: #1988f7;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+  }
+  
+  .item {
+    color: white;
+    background-color: transparent;
+    font-size: 18px;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 14px 20px;
+    text-decoration: none;
+  }
+  
+  .item.title {
+    font-weight: 600;
+  }
+  
+  .item:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
